--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_tab_menu">TabMenuActivity</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main3">Main3Activity</string>
+    <string name="title_activity_lateral_menu">LateralMenuActivity</string>
 </resources>
