--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_main3">Main3Activity</string>
     <string name="title_activity_lateral_menu">LateralMenuActivity</string>
+    <string name="title_activity_categoria_helper">CategoriaHelper</string>
 </resources>
